# cnb-guesser

./: README.md  config.py  pyproject.toml
cnb_guesser/: evaluate_guesses.py  generate_guesses.py  generate_vote_guesses.py  utils.py
cnb_guesser/guessers/: guesser_base.py  vector_guesser.py  vote_guesser.py
cnb_guesser/guessers/gpt/: few_shot_guesser.py  gpt_completer.py  gpt_guesser.py  relation_guesser.py
data/: few_shot_prompt.txt  few_shot_prompt_6.txt  relation_few_shot_prompt.txt  scenario_data.yaml  scenarios.yaml  scenarios_data.yaml  scenarios_unfiltered.yaml
guesses/: glove_guesses.yaml  gpt-cot_guesses.yaml  gpt-few-shot-3_guesses.yaml  gpt-few-shot-6_guesses.yaml  gpt-few-shot_guesses #1.yaml  gpt-few-shot_guesses.yaml  gpt-list_guesses.yaml  gpt-list_guesses_old.yaml  gpt-relation-few-shot_guesses.yaml  gpt-relation_guesses.yaml  gpt-simple_guesses.yaml  vote-10_early_stop_guesses.yaml  vote-3_guesses.yaml  vote-5_guesses.yaml  vote_guesses.yaml
guesses/notes/: glove_guesses.yaml  gpt-few-shot-3_guesses.yaml  gpt-few-shot_guesses #1.yaml  gpt-few-shot_guesses.yaml  gpt-list_guesses.yaml  gpt-relation-few-shot_guesses.yaml  gpt-relation_guesses.yaml  gpt-simple_guesses.yaml  vote-10_early_stop_guesses.yaml  vote-3_guesses.yaml  vote-5_guesses.yaml  vote_guesses.yaml
